refactor: 일부 메서드를 Car 클래스 내부로 이동
Car 관련 메서드인 showRaceProgress, validateName, move 메서드를
Car클래스로 이동함.